--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "bootstrap": "^5.3.3",
     "next": "14.1.0",
     "react": "^18",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18",
-    "sass": "^1.71.1"
+    "react-hook-form": "^7.50.1",
+    "sass": "^1.71.1",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@types/node": "^20",
