--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
+    "react-otp-input": "^3.1.1",
     "sass": "^1.71.1",
     "yup": "^1.3.3"
   },
