--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "bootstrap": "^5.3.3",
     "next": "14.1.0",
     "next-auth": "^4.24.6",
+    "nextjs-progressbar": "^0.0.16",
     "react": "^18",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
     "react-jwt": "^1.2.0",
     "react-otp-input": "^3.1.1",
+    "react-spinners": "^0.13.8",
     "sass": "^1.71.1",
     "yup": "^1.3.3"
   },
