--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@hookform/resolvers": "^3.3.4",
+    "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "next": "14.1.0",
     "next-auth": "^4.24.6",
