--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,9 @@
 version: '3'
-
 services:
-  rw-studio-fe:
+  rw-studio-fe2:
     build: .
-    container_name: rw-studio-fe
     ports:
-      - 3000:3000
+      - "3001:3001"
+    environment:
+      - PORT=3001
+    command: "npm start"
